[tool.poetry]
name = "qulacsvis"
version = "0.1.0"
readme = "README.md"
description = "visualizers for qulacs"
repository = "https://github.com/Qulacs-Osaka/qulacs-visualizer"
homepage = "https://github.com/Qulacs-Osaka/qulacs-visualizer"
documentation = "https://qulacs-osaka.github.io/qulacs-visualizer"
authors = ["Qulacs-Osaka <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Qulacs = "^0.3.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
